--- a/.github/workflows/electron-build.yml
+++ b/.github/workflows/electron-build.yml
@@ -24,17 +24,32 @@ jobs:
       - uses: conda-incubator/setup-miniconda@v3
         with:
           environment-file: environment-build.yml
-          activate-environment: watertap-ui-env
+          activate-environment: flowsheet-processor-env
           miniforge-version: latest
       
       - name: Install Azure Signtool
         run: |
           dotnet tool install --global AzureSignTool
 
+      - name: Add project to .env file (for pyinstaller)
+        working-directory: ./pyinstaller/hooks
+        run: |
+            echo project=watertap >> .env
+
+      - name: Install IDAES Flowsheet Processor UI locally
+        working-directory: ./electron
+        # run: git clone https://github.com/watertap-org/idaes-flowsheet-processor-ui.git && cd idaes-flowsheet-processor-ui && pip install --progress-bar off .
+        run: git clone https://github.com/MichaelPesce/idaes-flowsheet-processor-ui.git && cd idaes-flowsheet-processor-ui && git fetch --all --tags && git checkout initial-cleanup && pip install --progress-bar off .
+
       - name: Add theme to .env file
-        working-directory: ./electron/ui
+        working-directory: ./electron/idaes-flowsheet-processor-ui/frontend
         run: |
             echo REACT_APP_THEME=watertap >> .env
+
+      - name: Install idaes-flowsheet-processor-ui Python package
+        working-directory: ./electron/idaes-flowsheet-processor-ui
+        run: |
+          pip install --progress-bar off .
 
       - name: Install Electron JS dependencies
         run: |
@@ -42,38 +57,32 @@ jobs:
 
       - name: Install frontend JS dependencies
         run: |
-          npm --prefix electron/ui clean-install
+          npm --prefix electron/idaes-flowsheet-processor-ui/frontend clean-install
 
       - name: Get idaes extensions
         run: idaes get-extensions
 
-      - name: Install Watertap locally
+      - name: Install Watertap locally ## this might not need to be installed locally anymore; leave it for now
         working-directory: ../
         run: git clone https://github.com/watertap-org/watertap.git && cd watertap && pip install --progress-bar off .
-
-      # - name: Install Prommis
-      #   run: pip install --progress-bar off prommis
-      
-      - name: Install watertap-ui Python package
-        run: |
-          pip install --progress-bar off .
 
       - name: Transfer Entry points
         run: |
           python move_entrypoints.py -p watertap
 
       - name: Build Backend
-        run: npm --prefix electron run build-backend
+        working-directory: ./pyinstaller
+        run: pyinstaller -y --clean --distpath ../electron/py_dist main.spec
 
       - name: Build Frontend
-        run: npm --prefix electron run build-frontend-win
+        run: npm --prefix electron/idaes-flowsheet-processor-ui/frontend run build-frontend-win
 
       - name: Build Windows Distribution
         run: npm --prefix electron run electron-build-win
 
       - name: Sign Windows Distribution
         run: |
-          AzureSignTool sign -kvu "${{ secrets.AZURE_KEY_VAULT_URI }}" -kvi "${{ secrets.AZURE_CLIENT_ID }}" -kvt "${{ secrets.AZURE_TENANT_ID }}" -kvs "${{ secrets.AZURE_CLIENT_SECRET }}" -kvc ${{ secrets.AZURE_CERT_NAME }} -tr http://timestamp.digicert.com -v electron/dist/WaterTAP-UI_24.11.20_win64.exe
+          AzureSignTool sign -kvu "${{ secrets.AZURE_KEY_VAULT_URI }}" -kvi "${{ secrets.AZURE_CLIENT_ID }}" -kvt "${{ secrets.AZURE_TENANT_ID }}" -kvs "${{ secrets.AZURE_CLIENT_SECRET }}" -kvc ${{ secrets.AZURE_CERT_NAME }} -tr http://timestamp.digicert.com -v electron/dist/IDAES-Flowsheet-Processor_24.12.04_win64.exe
 
 
       - name: Upload artifact for windows build
@@ -82,4 +91,4 @@ jobs:
         with:
             name: windows-dist
             path: |
-              electron/dist/WaterTAP-UI_24.11.20_win64.exe
+              electron/dist/IDAES-Flowsheet-Processor_24.12.04_win64.exe
