--- a/.github/workflows/electron-build.yml
+++ b/.github/workflows/electron-build.yml
@@ -23,7 +23,7 @@ jobs:
       - uses: actions/checkout@v4
       - uses: conda-incubator/setup-miniconda@v3
         with:
-          environment-file: environment-build.yml
+          environment-file: environment.yml
           activate-environment: flowsheet-processor-env
           miniforge-version: latest
       
