update gitignore; add main.js to electron packaged files

--- a/electron/package.json
+++ b/electron/package.json
@@ -87,7 +87,8 @@
       "build/**/*",
       "py_dist/**/*",
       "package.json",
-      "setup-extensions-dist/**/*"
+      "setup-extensions-dist/**/*",
+      "main.js"
     ],
     "directories": {
       "buildResources": "assets"
