pass each secret in individually

--- a/.github/workflows/test-electron-build.yml
+++ b/.github/workflows/test-electron-build.yml
@@ -24,4 +24,14 @@ jobs:
         pip-install-target: ${{ matrix.pip-install-target }}
         idaes-flowsheet-processor-ui-repo: MichaelPesce/idaes-flowsheet-processor-ui
         idaes-flowsheet-processor-ui-ref: initial-cleanup
-    secrets: inherit
+    secrets:
+        AZURE_KEY_VAULT_URI:
+            ${{ secrets.AZURE_KEY_VAULT_URI }}
+        AZURE_CLIENT_ID:
+            ${{ secrets.AZURE_CLIENT_ID }}
+        AZURE_TENANT_ID:
+            ${{ secrets.AZURE_TENANT_ID }}
+        AZURE_CLIENT_SECRET:
+            ${{ secrets.AZURE_CLIENT_SECRET }}
+        AZURE_CERT_NAME:
+            ${{ secrets.AZURE_CERT_NAME }}
