show files during workflow

--- a/.github/workflows/electron-build.yml
+++ b/.github/workflows/electron-build.yml
@@ -81,6 +81,13 @@ jobs:
         run: |
           pip install --progress-bar off .
 
+      - name: Show files
+        run: ls -a
+      
+      - name: Show files in electron directory
+        working-directory: ./electron
+        run: ls -a
+
       - name: Install Electron JS dependencies
         run: |
           npm --prefix electron clean-install
