clean-install -> install for electron dependencies

--- a/.github/workflows/electron-build.yml
+++ b/.github/workflows/electron-build.yml
@@ -90,7 +90,7 @@ jobs:
 
       - name: Install Electron JS dependencies
         run: |
-          npm --prefix electron clean-install
+          npm --prefix electron install
 
       - name: Install frontend JS dependencies
         run: |
