use parent package name for entry points; use project name for naming artifact package; fix working directory for moveentrypoints step in workflow

--- a/.github/workflows/electron-build.yml
+++ b/.github/workflows/electron-build.yml
@@ -103,6 +103,7 @@ jobs:
         run: idaes get-extensions
 
       - name: Transfer Entry points
+        working-directory: ./scripts
         run: |
           python move_entrypoints.py -p ${{ inputs.project }}
 
