--- a/.github/workflows/electron-build.yml
+++ b/.github/workflows/electron-build.yml
@@ -74,7 +74,7 @@ jobs:
 
         ## creates package.json and .env files
       - name: Set configuration files
-        run: python scripts/set_configuration.py -p ${{ inputs.project }}
+        run: python scripts/set_configuration.py -p ${{ inputs.project }} -v ${{ steps.generate-build-number.outputs.build-number }}
 
       - name: Show files
         run: ls -a
@@ -100,7 +100,7 @@ jobs:
       - name: Transfer Entry points
         working-directory: ./scripts
         run: |
-          python move_entrypoints.py -p ${{ inputs.project }} -v ${{ steps.generate-build-number.outputs.build-number }}
+          python move_entrypoints.py -p ${{ inputs.project }}
 
       - name: Print Python pip packages
         run: pip freeze
