--- a/.github/workflows/electron-build.yml
+++ b/.github/workflows/electron-build.yml
@@ -76,11 +76,12 @@ jobs:
       - name: Set configuration files
         run: python scripts/set_configuration.py -p ${{ inputs.project }} -v ${{ steps.generate-build-number.outputs.build-number }}
 
-      - name: Show files
+      - name: Show files in idaes-flowsheet-processor-ui directory
+        working-directory: ./electron/idaes-flowsheet-processor-ui/backend
         run: ls -a
       
-      - name: Show files in electron directory
-        working-directory: ./electron
+      - name: Show files in idaes-flowsheet-processor-ui directory
+        working-directory: ./electron/idaes-flowsheet-processor-ui/backend/src
         run: ls -a
 
       - name: Install Electron JS dependencies
