--- a/.github/workflows/electron-build.yml
+++ b/.github/workflows/electron-build.yml
@@ -77,7 +77,7 @@ jobs:
 
         ## creates package.json and .env files
       - name: Set configuration files
-        run: python scripts/set_configuration.py -p ${{ inputs.project }} -v ${{ steps.generate-build-number.outputs.build-number }}
+        run: python scripts/set_configuration.py -p ${{ inputs.project }} -v ${{ steps.generate-build-number.outputs.build-number }} -a ${{ inputs.artifact-name }}
 
       - name: Install Electron JS dependencies
         working-directory: ./electron
