--- a/.github/workflows/electron-build.yml
+++ b/.github/workflows/electron-build.yml
@@ -82,7 +82,7 @@ jobs:
             echo "build-number=${{ inputs.package-build-number }}" >> $GITHUB_OUTPUT
           fi
 
-      - name: Set output
+      - name: Set artifact path
         id: artifact-path
         run: echo "path=electron/dist/${{ inputs.artifact-name }}_${{ steps.generate-build-number.outputs.build-number }}_${{ matrix.os }}.${{ matrix.artifact-file-extension }}" >> $GITHUB_OUTPUT
 
@@ -124,11 +124,17 @@ jobs:
           CI: false
         run: npm run build
 
-      - name: Build Windows Distribution
+      - name: Build ${{ matrix.os }} Distribution
         working-directory: ./electron
-        run: npm run electron-build-win
+        run: |
+          if [ "${{ matrix.os }}" = "arm64"]; then
+            npm run electron-build-mac
+          else
+            npm run electron-build-win
+          fi
 
       - name: Sign Windows Distribution
+        if: ${{ matrix.os }} == 'win64'
         run: |
           AzureSignTool sign -kvu "${{ secrets.AZURE_KEY_VAULT_URI }}" -kvi "${{ secrets.AZURE_CLIENT_ID }}" -kvt "${{ secrets.AZURE_TENANT_ID }}" -kvs "${{ secrets.AZURE_CLIENT_SECRET }}" -kvc ${{ secrets.AZURE_CERT_NAME }} -tr http://timestamp.digicert.com -v ${{ steps.artifact-path.outputs.path }}
 
