replace windows dist with matrix.os dist; fix if statement for signing windows distribution

--- a/.github/workflows/electron-build.yml
+++ b/.github/workflows/electron-build.yml
@@ -134,14 +134,14 @@ jobs:
           fi
 
       - name: Sign Windows Distribution
-        if: ${{ matrix.os }} == 'win64'
+        if: runner.os == 'Windows'
         run: |
           AzureSignTool sign -kvu "${{ secrets.AZURE_KEY_VAULT_URI }}" -kvi "${{ secrets.AZURE_CLIENT_ID }}" -kvt "${{ secrets.AZURE_TENANT_ID }}" -kvs "${{ secrets.AZURE_CLIENT_SECRET }}" -kvc ${{ secrets.AZURE_CERT_NAME }} -tr http://timestamp.digicert.com -v ${{ steps.artifact-path.outputs.path }}
 
 
-      - name: Upload artifact for windows build
+      - name: Upload artifact for ${{ runner.os }} build
         uses: actions/upload-artifact@v4
         if: always()
         with:
-            name: ${{ inputs.project }}-windows-dist
+            name: ${{ inputs.project }}-${{ matrix.os }}x-dist
             path: ${{ steps.artifact-path.outputs.path }}
